[package]
name = "flare_server"
version = "0.1.0"
authors = [ "Kylixs <gongdewei@gmail.com>" ]
description = "JVM Monitoring and profiling agent"
keywords = [ "java", "jvm", "jvmti", "debugger" ]


[lib]
#crate_type = [ "cdylib", "dylib", "rlib" ]
crate-type = ["lib", "dylib", "staticlib"]
#name="flare_server"
path="src/lib.rs"

#[[bin]]
#name = "main"
#doc = false
#path = "src/main.rs"

[dependencies]
flare_utils = { path = "../flare-utils" }
libc = "0.2.*"
time = "0.1.*"
lazy_static = "0.2.*"
toml = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0"
chrono = "0.4.7"
log = "0.4"
env_logger = "0.6.2"
#resp = "1.0.2"
resp = { path = "../thirty-libs/resp" }
websocket = "0.23.0"
timer = "0.2.0"
#stopwatch = "0.0.7"
#inferno = "0.9.0"
inferno = { path = "../thirty-libs/inferno"}
#string enum
strum = "0.16.0"
strum_macros = "0.16.0"
hyper-staticfile = "0.4.2"
futures="0.1.28"
http="0.1.20"
hyper="0.12.35"