[package]
name = "flare-utils"
version = "0.1.0"
authors = ["kylixs <gongdewei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib", "staticlib"]
name="flareutils"
path="src/lib.rs"


[dependencies]
time = "0.1.*"
lazy_static = "0.2.*"
toml = "0.4.*"
#serde = "1.0.*"
#serde_derive = "1.0.*"
#serde_json = "1.0"
chrono = "0.4.7"
log = "0.4"
env_logger = "0.6.2"
resp = "1.0.2"
byteorder = "1.3.2"
enum_primitive = "0.1.1"
num = "0.2.0"
rand = "*"
#eclectic = "0.11.0"