[package]
name = "resp"
version = "1.0.2"
authors = ["Qing Yan <admin@zensh.com>"]
description = "RESP(REdis Serialization Protocol) Serialization for Rust."
documentation = "https://docs.rs/resp"
homepage = "https://github.com/iorust/resp"
repository = "https://github.com/iorust/resp.git"
readme = "README.md"
keywords = ["redis", "resp", "serialization"]
license = "MIT/Apache-2.0"

[dev-dependencies]
rand = "0.3"

[dependencies]
itoa = "0.4.4"